--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,12 +2,18 @@
     <string name="app_name">WifiPosition</string>
 
     <string-array name="algoNames">
-        <item name="1">K Nearest Neighbor (KNN) Algorithm</item>
-        <item name="2">Weighted K Nearest Neighbor (WKNN) Algorithm</item>
+        <item name="1">Cos Algorithm</item>
+        <item name="2">K Nearest Neighbor (KNN) Algorithm</item>
+        <item name="3">Weighted K Nearest Neighbor (WKNN) Algorithm</item>
+        <item name="4">Bayes MAP Algorithm</item>
+        <item name="5">Bayes MMSE Algorithm</item>
     </string-array>
 
     <string-array name="algoValues">
         <item name="1">1</item>
         <item name="2">2</item>
+        <item name="3">3</item>
+        <item name="4">4</item>
+        <item name="5">5</item>
     </string-array>
 </resources>
